<resources>
    <string name="app_name">Calculate</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="backspace">⌫</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">−</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="mode">%</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="tangent">tan</string>
    <string name="cos">cos</string>
    <string name="exp">e</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sin">sin</string>s
    <string name="absoluteValue">|x|</string>
    <string name="factorial">x!</string>
    <string name="pi">π</string>
    <string name="oneDividedByX">1/x</string>
    <string name="xSquared">x<sup><small>2</small></sup></string>
    <string name="xPowerY">x<sup><small>y</small></sup></string>
    <string name="squareRoot"><p> &#8730;</p></string>
    <string name="xSquareRootY"><sup><small><small>y</small></small></sup>&#8730;<small>x</small></string>
</resources>