<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@color/background"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/ClearButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:onClick="clear"
                    android:text="@string/clear"
                    android:textColor="@color/blue"
                    android:textSize="34sp"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/DivButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:onClick="divide"
                    android:text="@string/divide"
                    android:textColor="@color/blue"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/MulButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:onClick="multiply"
                    android:text="@string/multiply"
                    android:textColor="@color/blue"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/backspace"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:onClick="back"
                    android:text="@string/backspace"
                    android:textColor="@color/blue"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:cornerRadius="0px" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF3b3d40"
                    android:onClick="seven"
                    android:text="@string/seven"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:theme="@style/Theme.OperatorButton"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/button8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF3b3d40"
                    android:onClick="eight"
                    android:text="@string/eight"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:theme="@style/Theme.OperatorButton"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/button9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF3b3d40"
                    android:onClick="nine"
                    android:text="@string/nine"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:theme="@style/Theme.OperatorButton"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/buttonSub"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:onClick="minus"
                    android:text="@string/minus"
                    android:textColor="@color/blue"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:cornerRadius="0px" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF3b3d40"
                    android:onClick="four"
                    android:text="@string/four"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:theme="@style/Theme.OperatorButton"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/button5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF3b3d40"
                    android:onClick="five"
                    android:text="@string/five"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:theme="@style/Theme.OperatorButton"
                    app:cornerRadius="0px" />

                <Button
                    android:id="@+id/button6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF3b3d40"
                    android:onClick="six"
                    android:text="@string/six"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:theme="@style/Theme.OperatorButton" />

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:onClick="plus"
                    android:text="@string/plus"
                    android:textColor="@color/blue"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:cornerRadius="0px" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button1"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#FF3b3d40"
                            android:onClick="one"
                            android:text="@string/one"
                            android:textColor="#FFFFFF"
                            android:textSize="34sp"
                            android:theme="@style/Theme.OperatorButton"
                            app:cornerRadius="0px" />

                        <Button
                            android:id="@+id/button2"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#FF3b3d40"
                            android:onClick="two"
                            android:text="@string/two"
                            android:textColor="#FFFFFF"
                            android:textSize="34sp"
                            android:theme="@style/Theme.OperatorButton"
                            app:cornerRadius="0px" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#FF3b3d40"
                            android:onClick="three"
                            android:text="@string/three"
                            android:textColor="#FFFFFF"
                            android:textSize="34sp"
                            android:theme="@style/Theme.OperatorButton"
                            app:cornerRadius="0px" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/ModButton"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#FF3b3d40"
                            android:onClick="percent"
                            android:text="@string/mode"
                            android:textColor="#FFFFFF"
                            android:textSize="34sp"
                            android:textStyle="bold"
                            android:theme="@style/Theme.OperatorButton"
                            app:cornerRadius="0px" />

                        <Button
                            android:id="@+id/button0"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#FF3b3d40"
                            android:onClick="zero"
                            android:text="@string/zero"
                            android:textColor="#FFFFFF"
                            android:textSize="34sp"
                            android:theme="@style/Theme.OperatorButton"
                            app:cornerRadius="0px" />

                        <Button
                            android:id="@+id/DotButton"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#FF3b3d40"
                            android:onClick="dot"
                            android:text="@string/dot"
                            android:textColor="#FFFFFF"
                            android:textSize="34sp"
                            android:textStyle="bold"
                            android:theme="@style/Theme.OperatorButton"
                            app:cornerRadius="0px" />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/buttonEqual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF3b3d40"
                    android:onClick="equal"
                    android:text="@string/equal"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:theme="@style/Theme.AccentButton"
                    app:cornerRadius="0px" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>